# WorkShop2025

./: .gitignore  README.md  prompt_Defi.txt
D1/: README.md  architecture.md  docker-compose.yml  pra.md
D1/configs/: nginx.conf  nginx.crt  (+2 more)
D10/: cdc.md  prompt.md
D12/: prompt_defi_12.docx
D13/: prompt_defi_13.docx
D14/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  WorkshopApp.sln  WorkshopApp.vcxproj  WorkshopApp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
D14/WorkshopApp.dir/Debug/: WorkshopApp.exe.recipe  WorkshopApp.ilk
D14/WorkshopApp.dir/Debug/WorkshopApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
D14/src/: main.cpp
D14/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
D14/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
D14/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
D14/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
D16/: pubspec.yaml
D2/: README.md
D3/: rapport_intrusion_hypothetique.md
D4/: Campagne de Mailings de Sensibilisation à la Sécurité.md  Campagne de Sensibilisation et de Renforcement de la Défense aux Intrusions.md  Document de Coaching Sécurité _ Votre Guide Quotidien.md  Module de Formation 1 _ Les Fondamentaux de la Cybersécurité.md  documentation_defense_intrusions.md
D7/: README.md
(+75 files in other folders)
